# api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Event handler
 host: localhost:10010
-basePath: /kafkaesk/v1/api
+basePath: /api/v1
 #
 schemes:
   - http
@@ -13,7 +13,52 @@ consumes:
 produces:
   - application/json
 paths:
-  /event:
+  /topic:
+    x-swagger-router-controller: topic
+    post:
+      description: Instantiates a new topic
+      operationId: topicCreate
+      parameters:
+        - name: topic
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Topic"
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: "#/definitions/Topic"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      description: Find existing topics
+      operationId: topicFind
+      parameters:
+        - name: fields
+          in: query
+          required: false
+          description: ''
+          type: string
+        - name: page
+          in: query
+          required: false
+          description: ''
+          type: integer
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Topic"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /topic/{topic}/event:
     x-swagger-router-controller: event
     post:
       description: Instantiates a new event
@@ -24,6 +69,10 @@ paths:
           required: true
           schema:
             $ref: "#/definitions/Event"
+        - name: topic
+          in: path
+          required: true
+          type: string
       responses:
         "201":
           description: Created
@@ -33,12 +82,60 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /topic/{topic}/subscription:
+    x-swagger-router-controller: subscription
+    post:
+      description: Creates a new subscription
+      operationId: subscriptionCreate
+      parameters:
+        - name: subscription
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Subscription"
+        - name: topic
+          in: path
+          required: true
+          type: string
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: "#/definitions/Subscription"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /topic/{topic}/subscription/{subscription}/pull:
+    x-swagger-router-controller: subscription
+    get:
+      description: Pull event from subscription
+      operationId: subscriptionPull
+      parameters:
+        - name: topic
+          in: path
+          required: true
+          type: string
+        - name: subscription
+          in: path
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Topic"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
 definitions:
   Event:
     required:
       - message
       - eventSpec
-      - topic
     properties:
       id:
         type: string
@@ -48,6 +145,32 @@ definitions:
         type: string
       message:
         type: string
+  Subscription:
+    required:
+      - name
+    properties:
+      id:
+        type: string
+      topic:
+        type: string
+      name:
+        type: string
+  Topic:
+    required:
+      - name
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      owner:
+        type: string
+      userName:
+        type: string
+      created:
+        type: string
+      modified:
+        type: number
   ErrorResponse:
     required:
       - message
